# rsty-stack-example

./: .gitignore  README.md
todo_api/: .gitignore  Cargo.toml  Rocket.toml
todo_api/src/: db.rs  error.rs  main.rs  prelude.rs
todo_api/src/utils/: macros.rs  mod.rs  try_froms.rs
todo_desktop/: .gitignore  README.md
todo_desktop/src/: index.html  main.js  styles.css
todo_desktop/src-tauri/: Cargo.toml  tauri.conf.json
todo_web/: Cargo.toml  index.html  style.css
todo_web/src/: controllers.rs  main.rs  models.rs  state.rs  todo_api.rs
todo_web/src/components/: mod.rs  task_form.rs  task_item.rs  task_list.rs
