[package]
name = "todo_web"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
yew = { version = "0.21", features = ["csr"] }
